--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,12 @@ dependencies:
     sdk: flutter
   intl: any
   table_calendar: ^3.0.9
+  font_awesome_flutter: ^10.4.0
+  firebase_core: ^2.12.0
+  firebase_auth: ^4.6.0
+  cloud_firestore: ^4.7.0
+  firebase_storage: ^11.2.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
