--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   cloud_firestore: ^4.7.0
   firebase_storage: ^11.2.0
   provider: ^6.0.5
+  fluttertoast: ^8.2.1
+  http: ^0.13.6
 
 dev_dependencies:
   flutter_test:
