--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   provider: ^6.0.5
   fluttertoast: ^8.2.1
   http: ^0.13.6
+  image_picker: ^0.8.7+5
+  image_cropper: ^4.0.1
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
